unpackaged/main/default/objects/Framework__Translation__c/Framework__Translation__c.object-meta.xml
<CustomObject>
    <label>Translation</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>