unpackaged/main/default/objects/Framework__Translation__c/fields/Framework__Field__c.field-meta.xml
<CustomField>
    <fullName>Framework__Field__c</fullName>
    <description>API Name of the field</description>
    <inlineHelpText>API Name of the field</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>