unpackaged/main/default/objects/Framework__Translation__c/fields/Framework__Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Framework__Language_Code__c</fullName>
    <description>The language of the translation</description>
    <inlineHelpText>The language of the translation</inlineHelpText>
    <label>Language Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>