unpackaged/main/default/objects/Framework__Translation__c/fields/Framework__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>Framework__ObjectId__c</fullName>
    <description>The Id of the object targeted by this translation</description>
    <inlineHelpText>The Id of the object targeted by this translation</inlineHelpText>
    <label>ObjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>