unpackaged/main/default/objects/Framework__Translation__c/fields/Framework__Translation__c.field-meta.xml
<CustomField>
    <fullName>Framework__Translation__c</fullName>
    <description>The translated value will display in the community portal</description>
    <inlineHelpText>The translated value will display in the community portal</inlineHelpText>
    <label>Translation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>